Added reference to new library

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -15,6 +15,7 @@ html
     script(src='/javascripts/nv.d3.min.js')
     script(src='/javascripts/angularjs-nvd3-directives.min.js')
     script(src='/javascripts/forecash.js')
+    script(src='/javascripts/lib-forecash.js')
     script(src='/javascripts/jquery.floatThead.min.js')
     script(src='/javascripts/switchery.min.js')
   body(ng-app='forecash')
