--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,12 +2,12 @@ doctype html
 html
   head
     title Forecash
-    link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Lobster')
+    //link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Lobster')
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/stylesheets/jquery-ui.min.css')
     link(rel='stylesheet', href='/stylesheets/nv.d3.css')
     link(rel='stylesheet', href='/stylesheets/switchery.min.css')
-    script(src='https://raw.github.com/mongodb/js-bson/master/browser_build/bson.js')
+    //script(src='https://raw.github.com/mongodb/js-bson/master/browser_build/bson.js')
     script(src='/javascripts/jquery.js')
     script(src='/javascripts/jquery-ui.min.js')
     script(src='/javascripts/angular.min.js')
