--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -422,6 +422,21 @@ body, html {
     margin: 10px auto;
 }
 
+#date_forecastStart {
+    color: black;
+    font-weight: 700;
+    background-color: yellow;
+    width: 80px;
+    margin-right: 20px;
+}
+
+#date_forecastEnd {
+    color: black;
+    font-weight: 700;
+    background-color: yellow;
+    width: 80px;
+}
+
 #main {
     margin: 350px auto 0 auto;
     max-width: 1500px;
@@ -453,7 +468,7 @@ thead {
 #header {
     width: 100%;
     height: 42px;
-    background-color: #dbdbdb;    
+    background-color: #dbdbdb;
     position: fixed;
     border: 1px solid #9f9f9f;
 }
@@ -461,7 +476,7 @@ thead {
 #forecastHead {
     position: fixed;
     height: 40px;
-    border-collapse: collapse;    
+    border-collapse: collapse;
     margin-top: 3px;
 }
 
@@ -575,7 +590,7 @@ grn bdr 379B36*/
 .view_tableContainer {
     position: relative;
     margin-left: 156px;
-    
+
 }
 .trans_view tbody:nth-child(odd) { background-color: #E0F3FF; }
 .trans_view tbody:nth-child(odd):hover { background-color: #CCEBFF; }
@@ -621,13 +636,13 @@ grn bdr 379B36*/
 }
 
 .button:hover {
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);    
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
 }
 
 .button:focus {
     border: 1px solid rgba(0, 0, 0, 0);
     box-shadow: 0 0 0 1px #fff inset;
-    outline: 0 none rgba(0, 0, 0, 0);    
+    outline: 0 none rgba(0, 0, 0, 0);
 }
 
 .btn_red {
